# GDGOC_LocalON

./: README.md  requirements.txt
localON/: .env.example  .gitignore  README.md  api.py  main.py  pyproject.toml
localON/DB_structure/: LOCAL_ON_DDL_v3_final.sql
localON/app/: __init__.py
localON/app/collector/: __init__.py  normalizers.py  openapi_client.py  sdot_sensor_seed.py  service.py  settings.py  top120_places.py
localON/app/collector/clients/: google_places.py  kakao_local.py
localON/app/controller/: __init__.py  areas.py  insights.py  mainpage.py  search.py
localON/app/core/: app.py
localON/app/domain/: README.md  __init__.py  database.py  ddl.py  models_analytics.py  models_citydata_detail_a.py  models_citydata_detail_b.py  models_citydata_live.py  models_master.py
localON/app/router/: __init__.py  areas.py  insights.py  mainpage.py  search.py
localON/app/schema/: __init__.py  areas.py  errors.py  insights.py  mainpage.py  search.py
localON/docs/: openapi.yaml
localON/tests/: conftest.py  test_areas.py  test_insights.py  test_insights_logic.py  test_mainpage.py  test_search.py
test_soeul_API/: .env  main.py  readme.md
test_soeul_API/app/: seoul_api.py
